# ascii-game

./: .clang-format  CMakeLists.txt  LICENSE  README.md  ascii.sln  run
ascii/: arraycheck.hpp  ascii.vcxproj  ascii.vcxproj.filters  collision.hpp  dialog.cpp  dialog.hpp  entity.cpp  entity.hpp  gui.cpp  input.hpp  main.cpp  mapgenerator.cpp  mapgenerator.hpp  player.cpp  player.hpp  stats.hpp
maps/: outside.map
src/: CMakeLists.txt  arraycheck.cpp  collision.cpp  collision.hpp  common.hpp  dialog.cpp  dialog.hpp  entity.cpp  entity.hpp  gui.cpp  gui.hpp  main.cpp  mapgenerator.cpp  mapparser.cpp  mapparser.hpp  player.cpp  player.hpp  stats.cpp  stats.hpp  tutorial.cpp  tutorial.hpp
